--- a/Privacy-Policy2.html
+++ b/Privacy-Policy2.html
@@ -606,7 +606,7 @@ td, th {
 							&#xa0;
 						</p>
 						<p style="margin-bottom:0pt; text-align:center; line-height:116%; font-size:10.5pt; background-color:#ffffff">
-							<span style="font-family:Arial; color:#595959">YES</span>
+							<span style="font-family:Arial; color:#595959">NO</span>
 						</p>
 						<p style="margin-bottom:0pt; text-align:center; background-color:#ffffff">
 							&#xa0;
@@ -629,7 +629,7 @@ td, th {
 							&#xa0;
 						</p>
 						<p style="margin-bottom:0pt; text-align:center; line-height:116%; font-size:10.5pt; background-color:#ffffff">
-							<span style="font-family:Arial; color:#595959">YES</span>
+							<span style="font-family:Arial; color:#595959">NO</span>
 						</p>
 						<p style="margin-bottom:0pt; text-align:center; background-color:#ffffff">
 							&#xa0;
@@ -721,7 +721,7 @@ td, th {
 							&#xa0;
 						</p>
 						<p style="margin-bottom:0pt; text-align:center; line-height:116%; font-size:10.5pt; background-color:#ffffff">
-							<span style="font-family:Arial; color:#595959">YES</span>
+							<span style="font-family:Arial; color:#595959">NO</span>
 						</p>
 						<p style="margin-bottom:0pt; text-align:center; background-color:#ffffff">
 							&#xa0;
